crates/vihaco-parser/tests/compile_errors/delegate_with_token.rs
use vihaco_parser::Parse;
#[derive(Parse)]
enum Bad {
    Plain(f64),
    #[delegate]
    #[token = "x"]
    A(i64),  // delegate + token — error
}
fn main() {}
