crates/vihaco-parser/tests/compile_errors/delegate_with_token.stderr
error: #[delegate] cannot be combined with #[token]
 --> tests/compile_errors/delegate_with_token.rs:5:5
  |
5 |     #[delegate]
  |     ^
